Fixed table size issues and added CSS to ensure visibility of horizontal scroll.

--- a/css/ve_tables.css
+++ b/css/ve_tables.css
@@ -8,10 +8,16 @@
 
 #iframe-shell #ve-table {
   height: 100%;
+  width: 100%;
+  overflow: scroll !important;
+}
+
+.slick-viewport {
+  overflow-x: hidden !important;
 }
 
 #iframe-shell {
-  overflow: auto;
+  overflow: hidden;
   height: 100%;
 }
 
